Live feed capability implemented

--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,32 @@
+body {
+  background-color: #212121;
+}
+
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  width: 100%;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  display: flex;
 }
 
-.App-link {
-  color: #61dafb;
+h1 {
+  font-size: 50px;
+  color: #BDBDBD;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.actionScreen {
+  background-color: #BDBDBD;
+  justify-content: center;
+  align-items: center;
+  width: 1000px;
+  position: absolute;
+  top: 15%;
+  left: 20%;
+  border-radius: 50px;
+  height: 600px;
+  display: flex;
+}
+
+.userFeed {
+  border-radius: 20px;
+  width: 500px;
 }
